objects/Benfit_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US:750 
To check the record is submitted for approval.</description>
        <label>AIA Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ARC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Initial_Submission_Date__c</fullName>
        <description>Initial Date the BRF was submitted for approval</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ARC Approval Initial Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Required__c</fullName>
        <formula>IF(ISPICKVAL(Request_Type__c,"Renewal - Administrative Changes"),False,

(Count_of_Custom_Products__c &gt; 0 || text(EGWP_Picklist__c)= 'Yes' || text(FlexLink_Picklist__c) = 'Yes' || Rx_Integration_PP__c &gt; 0) 

&amp;&amp; 

(((zzzMHP_Required__c = "Yes" ) &amp;&amp; ( zzzMHP_Test_Result__c = "Pass")) 

|| 
( (zzzMHP_Required__c = 'Yes') &amp;&amp; (zzzMHP_Test_Result__c = 'Deferred') || NOT(zzzMHP_Required__c = 'Yes')))

)</formula>
        <label>ARC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Skipped__c</fullName>
        <formula>IF(ARC_Approval_Required__c,FALSE,(Count_of_Custom_Products__c = 0 &amp;&amp; text(EGWP_Picklist__c)= 'Yes' &amp;&amp; text(FlexLink_Picklist__c)= 'Yes'))</formula>
        <label>ARC Approval Skipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Status__c</fullName>
        <description>ARC Approval Status</description>
        <label>ARC Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved by Committee</fullName>
                </value>
                <value>
                    <fullName>Rejected by Committee</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Auto-Approved by System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARC_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ARC Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASO__c</fullName>
        <formula>IF(ISPICKVAL(Funding_Arrangements__c ,'ASO') || ISPICKVAL(Funding_Arrangements__c ,'Other') || ISPICKVAL(Funding_Arrangements__c ,'Both') ,True,False)</formula>
        <label>ASO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Religious Accommodation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Accommodation</fullName>
                </value>
                <value>
                    <fullName>Emergency Contraception Accommodation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Alias__c</fullName>
        <formula>IF(  Opportunity__r.Account.Account_Alias_1__c  != '', Opportunity__r.Account.Account_Alias_1__c  +'','')+IF( Opportunity__r.Account.Account_Alias_2__c != '',','+ Opportunity__r.Account.Account_Alias_2__c +'','')+IF(  Opportunity__r.Account.Account_Alias_3__c  != '',','+  Opportunity__r.Account.Account_Alias_3__c  ,'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Account_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>B-03719 used to populate Account Executive added at BRF's related Account</description>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms_AE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name__c</fullName>
        <formula>Opportunity__r.Lead_Rep_Name_User__r.FirstName + ' '+ Opportunity__r.Lead_Rep_Name_User__r.LastName</formula>
        <label>Account Executive Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Full_Address__c</fullName>
        <formula>if(LEN(Account__r.BillingStreet)&gt;0,Account__r.BillingStreet&amp; " " , "" ) &amp; BR() &amp;
if(LEN(Account__r.BillingCity)&gt;0,Account__r.BillingCity&amp; ", " , "" )&amp;
if(LEN(Account__r.BillingState)&gt;0,Account__r.BillingState&amp; " " , "" )&amp;
if(LEN(Account__r.BillingPostalCode)&gt;0,Account__r.BillingPostalCode,"") &amp; BR() &amp;
If(LEN(Account__r.BillingCountry) &gt;0,Account__r.BillingCountry,"")</formula>
        <label>Account Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Opportunity__r.Account.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Account_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>B-03719 used to populate Account Manager added at BRF's related Account</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms_AM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Name__c</fullName>
        <formula>text(Opportunity__r.Service_Rep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Text(Opportunity__r.Service_Rep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Member_Count__c</fullName>
        <label>Actual Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustmentRecordCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AdjustmentRecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Options__c</fullName>
        <label>Aggregate Stop Loss Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Jurisdiction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>105%</fullName>
                </value>
                <value>
                    <fullName>110%</fullName>
                </value>
                <value>
                    <fullName>115%</fullName>
                </value>
                <value>
                    <fullName>120%</fullName>
                </value>
                <value>
                    <fullName>125%</fullName>
                </value>
                <value>
                    <fullName>130%</fullName>
                </value>
                <value>
                    <fullName>135%</fullName>
                </value>
                <value>
                    <fullName>140%</fullName>
                </value>
                <value>
                    <fullName>150%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Funding__c</fullName>
        <label>Claims Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit with Monthly Billing</fullName>
                </value>
                <value>
                    <fullName>Set Weekly Wire</fullName>
                </value>
                <value>
                    <fullName>Weekly Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Networks_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Networks Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ancillary Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Inactive_Date_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BRF Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRF_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))+ Id</formula>
        <label>BRF Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Opp_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))+  Opportunity__r.Id</formula>
        <label>BRF Opp Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Owner_Full_Name__c</fullName>
        <formula>Account__r.Owner.FirstName  +  Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Sold_Date_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BRF Sold Date field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BeneFact_Coder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BeneFact Coder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_NASCO_Coder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NASCO Benefit Coder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Period__c</fullName>
        <label>Benefit Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blue_Rewards_Drawloop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BlueRewards Drawloop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Acc_Name__c</fullName>
        <formula>Broker_Consultant_Name__r.Account.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Acc Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Commission__c</fullName>
        <defaultValue>(7/2)/100</defaultValue>
        <label>Broker Commission</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Consultant_Amount__c</fullName>
        <label>Broker/Consultant Amount</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Consultant_Compensation__c</fullName>
        <label>Broker/Consultant Compensation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commission (%)</fullName>
                </value>
                <value>
                    <fullName>PMPM ($)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Consultant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker/Consultant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Fund_Type_PP_COUNT__c</fullName>
        <label>CDH Fund Type PP COUNT</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.CDH_Fund_Type__c</field>
            <operation>equals</operation>
            <value>BlueFund</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Carve_Out_RX_Approval__c</fullName>
        <label>Carve-Out RX Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Dependents_Removal_Method_4a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Dependents Removal Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Opportunity__r.Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_count__c</fullName>
        <label>Clone count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Management Status Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name_in_BAA_Output__c</fullName>
        <description>field created as part of docusign changes. this is to generate the BAA document.</description>
        <formula>IF(TEXT( Control_Plan__c )= '690' ,'CareFirst of Maryland, Inc., d/b/a CareFirst BlueCross BlueShield','Group Hospitalization and Medical Services, Inc., d/b/a CareFirst BlueCross BlueShield')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name in BAA Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Count__c</fullName>
        <label>Contract Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Period__c</fullName>
        <inlineHelpText>If Non-Standard is selected, please fill in the Number of Months for Contract Period field.</inlineHelpText>
        <label>Contract Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard - 12 Months</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_Plan__c</fullName>
        <label>Control Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>580</fullName>
                </value>
                <value>
                    <fullName>690</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorporateMarketingUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CorporateMarketingUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Dental_Products__c</fullName>
        <description>Count - Dental Proposed Products</description>
        <label>Count of Dental Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Drug_Proposed_Products__c</fullName>
        <label>Count of Drug Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Vision_Products__c</fullName>
        <description>Vision Proposed Product Count</description>
        <label>Count of Vision Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_CDH_Products__c</fullName>
        <label>Count of CDH Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.CDH__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Custom_Dental_Products__c</fullName>
        <description>The number of custom dental products</description>
        <inlineHelpText>The number of custom dental products</inlineHelpText>
        <label>Count of Custom Dental Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Custom</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Funding_Arrangement__c</field>
            <operation>equals</operation>
            <value>ASO</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Custom_Drug_Products__c</fullName>
        <description>The number of custom drug products this BRF has.</description>
        <inlineHelpText>The number of custom drug products this BRF has.</inlineHelpText>
        <label>Count of Custom Drug Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Custom</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Custom_Products__c</fullName>
        <description>rollup summary field (Proposed Product where Custom = Yes)</description>
        <label>Count of Custom Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Custom</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Custom_Vision_Products__c</fullName>
        <description>The number of custom vision products for this BRF.</description>
        <inlineHelpText>The number of custom vision products for this BRF.</inlineHelpText>
        <label>Count of Custom Vision Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Custom</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Dug_With_Cafeteria__c</fullName>
        <label>Count of Dug With Non-Parallel</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Cafeteria__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Integrated_DM_Wellness__c</fullName>
        <description>The number of proposed products with Integrated DM Wellness.</description>
        <label>Count of Integrated DM Wellness</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_Core_DM_Wellness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Medical_CDH_BlueFund__c</fullName>
        <description>The count of medical products with CDH Blue Fund</description>
        <inlineHelpText>The count of medical products with CDH Blue Fund</inlineHelpText>
        <label>Count of Medical CDH BlueFund</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.CDH_Fund_Type__c</field>
            <operation>equals</operation>
            <value>BlueFund</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Medical_Custom_Wellness__c</fullName>
        <description>The number of medical products with custom wellness.</description>
        <inlineHelpText>The number of medical products with custom wellness.</inlineHelpText>
        <label>Count of Medical Custom Wellness</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_Wellness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Medical_FSA_BlueFund__c</fullName>
        <description>The number of medical products with CDH BlueFund.</description>
        <inlineHelpText>The number of medical products with CDH BlueFund.</inlineHelpText>
        <label>Count of Medical FSA BlueFund</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.FSA_BlueFund__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Medical_Proposed_Products__c</fullName>
        <label>Count of Medical Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medical Risk, Medical ASO</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_New_Dental_products__c</fullName>
        <label>Count of New Dental products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Cloned_From__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_New_Rx_products__c</fullName>
        <label>Count of New Rx products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Cloned_From__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_New_Vision_Products__c</fullName>
        <label>Count of New Vision Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Cloned_From__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_New_products__c</fullName>
        <label>Count of New products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Cloned_From__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Non_Standard_Products__c</fullName>
        <label>Count of Non Standard Vision Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Non - Standard</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Nonstandard_Dental_Products__c</fullName>
        <description>The number of non standard dental products.</description>
        <inlineHelpText>The number of non standard dental products.</inlineHelpText>
        <label>Count of Nonstandard Dental Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Non - Standard</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Funding_Arrangement__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Nonstandard_Drug_Products__c</fullName>
        <description>The number of non standard drug products</description>
        <inlineHelpText>The number of non standard drug products</inlineHelpText>
        <label>Count_of_Nonstandard_Drug_Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Non - Standard</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Proposed_Products_Non_Medical1__c</fullName>
        <label>Count of Proposed Products(Non-Medical)</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug, Dental, Vision, CareFirst Private Exchange</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>